fixed z-index for rules option

--- a/games/FizzBuzz/fizzBuzz.css
+++ b/games/FizzBuzz/fizzBuzz.css
@@ -319,9 +319,11 @@ text-shadow:0px 0px 0 rgb(242,242,242),1px 1px 0 rgb(230,230,230),2px 2px 0 rgb(
 			/* -- START MENU styling -- */
 
 				#rulesDiv {
+					position: absolute;
 					display: none;
 					width: 100%;
 					height: 100%;
+					z-index: 20;
 				} 
 
 				#rulesDivWrapper {
